<resources>
    <string name="app_name">好膳堂</string>

    <string name="lead_login">用户登录</string>
    <string name="lead_register">新用户注册</string>

    <string name="login">登录</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_recommend_hint">推荐人</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_lose">忘记密码？</string>
    <string name="login_title">欢迎登陆</string>
    <string name="login_code">短信登陆</string>
    <string name="format_not_correct">手机号码格式不正确</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="verification_code_empty">验证码不能为空</string>
    <string name="verification_code_fault">验证码错误</string>
    <string name="password_cannot_empty">密码不能为空</string>
    <string name="passwords_match">密码不一致</string>
    <string name="password_can_only">密码需要大于6位,只能包含数字字母下划线</string>
    <string name="update_pwd">确认密码</string>
    <string name="next">下一步</string>
    <string name="getcode">获取验证码</string>
    <string name="register">注册</string>
    <string name="register_title">欢迎注册</string>
    <string name="man">男</string>
    <string name="gril">女</string>
    <string name="home">首页</string>
    <string name="all">全部商品</string>
    <string name="friends">圈子</string>
    <string name="friends_publish">发表</string>
    <string name="car">购物车</string>
    <string name="mine">我的</string>
    <string name="mine_order_all">全部订单</string>
    <string name="mine_tuihuo">退货</string>
    <string name="mine_daifukuan">待支付</string>
    <string name="mine_daifahuo">待发货</string>
    <string name="mine_daiqueren">待收货</string>
    <string name="mine_daipingjia">待评价</string>

    <string name="mine_qianbao">钱包</string>
    <string name="mine_yongjin">收益</string>
    <string name="mine_youhuiquan">优惠券</string>
    <string name="mine_wodeshoucang">我的收藏</string>
    <string name="mine_liulanlishi">浏览历史</string>
    <string name="mine_bagnzhuzhongxin">帮助中心</string>
    <string name="mine_guanuwomen">关于我们</string>
    <string name="mine_kehufuwu">客户服务</string>

    <string name="my">个人信息</string>
    <string name="camera">拍照</string>
    <string name="album">从相机中选择</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="logout_confirm">确定退出当前用户吗？</string>
    <string name="my_update_name">修改昵称</string>
    <string name="my_add_phone">账号与安全</string>
    <string name="my_update_phone">更换手机号</string>
    <string name="my_update_pwd">修改密码</string>
    <string name="my_update_ic">修改身份证号码</string>
    <string name="my_update_again">身份证号已绑定</string>
    <string name="my_icon">头像</string>
    <string name="my_name">真实姓名</string>
    <string name="my_name2">真实姓名:</string>
    <string name="my_sex">性别</string>
    <string name="my_phone">手机</string>
    <string name="my_phone_null">未绑定</string>
    <string name="my_address">收货地址</string>
    <string name="my_logout">退出登陆</string>

    <string name="address">管理收货地址</string>
    <string name="address_edit">编辑地址</string>
    <string name="address_check">设为默认地址</string>
    <string name="address_add">新增收货地址</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="address_name">收货人&#160;&#160;&#160;&#160;</string>
    <string name="address_phone">联系方式</string>
    <string name="address_dz">收货地址</string>
    <string name="address_dz_detail">详细地址</string>
    <string name="address_logo">邮编&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>

    <string name="update_name_hint">*必须和支付宝登记的姓名一致(小于50个字符)。以供提现使用</string>
    <string name="update_name_hint2">昵称不能为空</string>
    <string name="phone_number">当前手机号</string>
    <string name="phone_number_new">新的手机号</string>
    <string name="code">验证码</string>
    <string name="update_phone_do">确认更换</string>
    <string name="update_phone_next">更换手机号</string>
    <string name="update_phone_n">当前手机号:</string>

    <string name="undone_time">下单时间</string>
    <string name="undone_refund">申请退款</string>
    <string name="undone_take">确认收货</string>

    <string name="refund_hint">温馨提示:订单一旦取消,无法恢复</string>
    <string name="refund_cause">退款原因:</string>
    <string name="refund_user">退款联系人:</string>
    <string name="refund_phone">联系方式:</string>

    <string name="refund_detail_number">订单编号:</string>
    <string name="refund_detail_cause">取消/退款原因:</string>
    <string name="refund_detail_progress">取消/退款进度:</string>
    <string name="refund_detail_the">退款明细</string>
    <string name="refund_detail_online">在线支付:</string>

    <string name="wallet">钱包</string>
    <string name="wallet_useableblance">可用余额:&#8195;</string>
    <string name="wallet_balance">账户余额:&#8195;</string>
    <string name="wallet_freeze">冻结金额:&#8195;</string>
    <string name="wallet_income">商户收入:&#8195;</string>
    <string name="wallet_score">积&#8195;&#8195;分:&#8195;</string>
    <string name="wallet_stock">股&#8195;&#8195;份:&#8195;</string>
    <string name="wallet_yuan">元</string>
    <string name="wallet_get">提现</string>
    <string name="wallet_rule">*提现规则</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="loading">请稍后</string>
    <string name="reload">重新尝试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>


    <string name="home_tv">/&#160;&#160;实&#160;·&#160;惠&#160;·&#160;好&#160;·&#160;货&#160;&#160;/</string>
    <string name="home_tv2">/&#160;&#160;摩&#160;·&#160;登&#160;·&#160;时&#160;·&#160;尚&#160;&#160;/</string>
    <string name="home_tv3">/&#160;&#160;品&#160;·&#160;质&#160;·&#160;生&#160;·&#160;活&#160;&#160;/</string>
    <string name="home_tv4">/&#160;&#160;吃&#160;·&#160;喝&#160;·&#160;玩&#160;·&#160;乐&#160;&#160;/</string>
    <string name="home_tv1">/&#160;&#160;联&#160;·&#160;盟&#160;·&#160;商&#160;·&#160;家&#160;&#160;/</string>
    <string name="home_search">请输入您想搜索的内容</string>

    <string name="search_price">价格</string>
    <string name="search_hot">热门</string>
    <string name="search_new">新品</string>
    <string name="search_cuxiao">促销</string>


    <string name="good_detail_conllect">加入收藏</string>
    <string name="good_detail_act">优惠活动</string>
    <string name="good_detail_num">请选择规格，数量</string>
    <string name="good_detail_shit">买家保证正品保证</string>
    <string name="good_detail_detail">商品详情</string>
    <string name="good_detail_brand">品牌</string>
    <string name="good_detail_address">户地</string>
    <string name="good_detail_addcar">加入购物车</string>
    <string name="good_detail_buy">立即购买</string>
    <string name="good_detail_total">总价：</string>
    <string name="good_detail_buynum">购买数量</string>
    <string name="goods_price">商品价格</string>
    <string name="order_price">订单金额</string>
    <string name="title_freight">运费</string>
    <string name="btn_car_to_pay">去结算</string>

    <string name="car_paisong">配送服务</string>
    <string name="car_free">已免运费</string>
    <string name="car_weight">规格：</string>

    <string name="friends_hint">分享有趣事儿</string>
    <string name="friends_send">发布</string>
    <string name="friends_title_detail">详情</string>

    <string name="fans_title1">粉丝</string>
    <string name="fans_title2">已关注</string>
    <string name="RMB">¥</string>

    <string name="collect_title">收藏</string>

    <string name="bind_name">姓名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="bind_hu">开户行&#160;&#160;&#160;&#160;</string>
    <string name="bind_phone">手机号&#160;&#160;&#160;&#160;</string>

    <!-- WXPayEntryActivity -->
    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>


    <string name="register_xy">《人道易购平台服务协议》《隐私权政策》\n《支付宝协议》</string>

    <string name="tv_btn_submit">提交</string>

</resources>
