<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <include layout="@layout/layout_title" />

    <TextView
        android:id="@+id/login"
        style="@style/normal_tv_btn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textview_normal_btn"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />


    <EditText
        android:id="@+id/login_phone"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@null"
        android:drawableBottom="@drawable/editview_line"
        android:gravity="center"
        android:hint="@string/login_phone_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@null"
        android:drawableBottom="@drawable/editview_line"
        android:gravity="center"
        android:hint="@string/login_pwd_hint"
        android:inputType="textPassword"
        android:maxLength="11"
        android:maxLines="1" />

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/login_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:hint="@string/login_lose" />

        <TextView
            android:id="@+id/login_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_code" />
    </RelativeLayout>

    <Switch
        android:id="@+id/switch_btn_baseapi"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="36dp"
        android:textOn="on"
        android:textOff="off"
        android:text="调整为测试环境"
        android:visibility="gone"
        />


</RelativeLayout>