<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/address_title"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="6dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp">


        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toLeftOf="@+id/search_iv"
            android:textColor="@color/colorBlack"
            android:background="@drawable/textview_home_search"
            android:drawablePadding="10dp"
            android:hint="@string/home_search"
            android:textColorHint="@color/colorBlack"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/search_iv"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@mipmap/sousuo" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_search_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/search_price"
            android:textColor="@color/colorBlack"
            android:tag="0"
            android:textSize="16sp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:tag="1"
            android:text="@string/search_hot" />
        <!--  android:textColor="@drawable/search_radio_color" -->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:tag="2"
            android:gravity="center"
            android:text="@string/search_new" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:textSize="16sp"
            android:gravity="center"
            android:tag="3"
            android:text="@string/search_cuxiao"
            android:textColor="@color/colorBlack"
            />

    </RadioGroup>

    <com.cj.reocrd.view.refresh.RefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </android.support.v7.widget.RecyclerView>
    </com.cj.reocrd.view.refresh.RefreshLayout>


</LinearLayout>